--- a/minis/index.css
+++ b/minis/index.css
@@ -13,6 +13,13 @@ body {
     min-height: 100vh;
 }
 
+#footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
 body::before {
     content: '';
     position: fixed;
