--- a/minis/index.css
+++ b/minis/index.css
@@ -176,10 +176,7 @@ body::before {
 
 .mini-post-title {
     color: #3b342d;
-    font-size: 24px;
-    line-height: 1.7;
-    margin-bottom: 20px;
-    min-height: 60px;
+    font-size: 26px;        
 }
 
 /* Loading placeholder */
@@ -490,7 +487,7 @@ body::before {
     }
 
     .intro-section {
-        position: relative;
+        position: sticky;
         margin-left: 0;
         width: 100%;
         transform: translateZ(0);
