--- a/minis/index.css
+++ b/minis/index.css
@@ -487,7 +487,7 @@ body::before {
     }
 
     .intro-section {
-        position: sticky;
+        position: absolute;
         margin-left: 0;
         width: 100%;
         transform: translateZ(0);
